# ImageInside

./: .gitignore  CMakeLists.txt  Candidate.h  CandidateFinder.cpp  CandidateFinder.h  CandidateSettings.h  Correlation.cpp  Correlation.h  ImageInside.cpp  LoadTexture.cpp  LoadTexture.h  README.md  Settings.cpp  Settings.h
ImFileDialog/: ImFileDialog.cpp  ImFileDialog.h
example_files/: LICENSE  deer_and_leaves_small_24bit.ppm
imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
imgui/backends/GL/: gl3w.c  gl3w.h
